--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Cheshire Cat - магия уюта и релакса">
-  <title>Cheshire Cat</title>
+  <meta name="description" content="Чеширский Кот — магия уюта и релакса">
+  <title>Чеширский Кот</title>
 
   <!-- ШРИФТЫ -->
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap&subset=cyrillic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Playfair+Display:wght@700&family=Spectral:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- ПРЕЛОАД -->
@@ -28,12 +29,12 @@
         <img src="media/catlogo.gif" alt="logo main" class="main-logo" loading="eager">
       </div>
 
-      <h1 class="hero-title">
-        <span>C</span><span>h</span><span>e</span><span>s</span><span>h</span><span>i</span><span>r</span><span>e</span><span>&nbsp;</span><span>C</span><span>a</span><span>t</span>
+      <h1 class="hero-title" style="font-family: 'Lobster', cursive;">
+        <span>Ч</span><span>е</span><span>ш</span><span>и</span><span>р</span><span>с</span><span>к</span><span>и</span><span>й</span><span>&nbsp;</span><span>К</span><span>о</span><span>т</span>
       </h1>
 
       <div class="hero-subtext">
-        <p>"Чершиский кот" — ваш проводник в мир невидимых возможностей.</p>
+        <p>"Чеширский кот" — ваш проводник в мир невидимых возможностей.</p>
       </div>
 
       <div class="hero-info">
