--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </h1>
 
       <div class="hero-subtext">
-        <p>"Чеширский кот" — ваш проводник в мир невидимых возможностей.</p>
+        <p>"Ваш проводник в мир невидимых возможностей."</p>
       </div>
 
       <div class="hero-info">
