--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
     <canvas id="smokeCanvas" class="background-canvas"></canvas>
     <div class="gradient-overlay"></div>
   </div>
-  
   <div class="content">
     <img src="media/catlogo.gif" alt="Cheshire Cat Logo" class="logo">
     <h1 class="title">Чеширский Кот</h1>
-    <h2 class="subtitle">Join the Mystery</h2>
+    <h2 class="subtitle">Join by Mystery</h2>
     <div class="chat-text">
       <span>Будь ближе, переходи в наше комьюнити по кнопке</span>
     </div>
     <div class="buttons-container">
       <button class="bubble-button" data-href="https://t.me/your_operator_link">
+        <div class="tg-logo"></div>
         <span>Оператор 1</span>
       </button>
       <button class="bubble-button" data-href="https://t.me/Cheshyrs2">
+        <div class="tg-logo"></div>
         <span>Оператор 2</span>
       </button>
       <button class="bubble-button" data-href="https://t.me/Cheshyrskui">
+        <div class="tg-logo"></div>
         <span>Наши ссылки</span>
       </button>
     </div>
