--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <span>Будь ближе, переходи в наше комьюнити по кнопке</span>
     </div>
     <div class="buttons-container">
-      <button class="bubble-button" data-href="https://t.me/your_operator_link">
+      <button class="bubble-button" data-href="https://t.me/Cheshyrs">
         <div class="tg-logo"></div>
         <span>Оператор 1</span>
       </button>
